--- a/index.html
+++ b/index.html
@@ -196,6 +196,55 @@
     </body>
 	     </html>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+		     <!--kenyan tours adventures project-->
+		     <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible"  content="ie=edge">
+
+    <link href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+
+    <title>Kenya | Exciting tours for adventurous people</title>
+  </head>
+  <body>
+    <header class="header">
+      <div class="header__logo-box">
+        <img src="https://media.licdn.com/dms/image/C4E0BAQEbCdX7PnIgpw/company-logo_100_100/0/1641327516365/walkerhotels_logo?e=2147483647&v=beta&t=XsjqDzApdNb52dn-V1Rrj6UK7bRs0a4iOKk1CeilBmg" alt="logo" class="header__logo">
+      </div>
+      <div class="header__text-box">
+      <h1 class="heading-primary">
+        <span class="heading-primary--main">kenya*adventures</span>
+         <span class="heading-primary--sub">is where life happens</span>
+         </h1>
+         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+        </div>
+    </header>
+  </body>
+</html>
+
+		     
+
 		     
 
 
